fix: get order and order detail